--- a/process-analysis/sections/courses.tex
+++ b/process-analysis/sections/courses.tex
@@ -1,12 +1,13 @@
-During this semester all of the group members participated in all the courses there was offered by the university. The courses were: Calculus, Basic Electrical Engineering, Digital Design and Sensor and the free-study activity 3D CAD Modelling and product development.
+During the semester, every single group member participated in all the courses that was offered by the university. The courses were: Calculus, Basic Electrical Engineering, Digital Design and Sensor and the free-study activity 3D CAD Modelling and product development.
 
-The Basic Electrical Engineering gave us lectures about the fundamentals in relation to DC circuits and Digital Design gave us information about Digital circuits and sensors.\\
-The free-study activity 3D CAD gave us insight into how 3D models worked and how to design them.
+The Basic Electrical Engineering course gave us lectures about the fundamentals in relation to DC circuits and Digital Design gave us information about Digital circuits and sensors. The free-study activity 3D CAD Modelling gave us insight into how 3D models work and how to design them using a CAD software
 
 \section{Discussion and Conclusion}
 
-Knowledge from most of the classes were put to use for the P2 project. Basic Electrical Engineering helped us understand the fundamentals in relation to creating our own circuits that were used in the project. Different analysis processes learned in the class allowed us to theoretically test our circuits, before building them.  This allowed us ensure that the circuit would function correct and to help us avoid damaging equipment.\\
-Digital Design and Sensors helped in regards to understanding the differences between Analog and Digital signalling. Our project used microcontrollers for many of the tasks, which resulted in the class be really useful.\\ %TODO Needs to be improved
-The 3D CAD course taught us all how to create models using Autodesk Inventor. We used the methods learned in the class to create custom enclosures for our prototype, which resulted in a more rapid and easier prototyping process. 
+Knowledge from most of the classes were put to use for the P2 project. Basic Electrical Engineering helped us understand the fundamentals in relation to creating our own circuits that were used in the project. Different analysis processes learned in the class allowed us to theoretically test our circuits, before building them. This allowed us to ensure that the circuit would function correctly and that it would help us avoid damaging equipment.
 
-During the P2 project we did not directly use Calculus, but instead some general mathematics. The course has given us knowledge we will be able to put into use in the coming projects.
+Digital Design and Sensors helped in regards to understanding the differences between Analog and Digital signalling. Our project was using microcontrollers for many of the tasks, which resulted in the class be really useful.
+
+The 3D CAD Modelling course taught us all how to create models using Autodesk Inventor. We used the methods learned in the class to create custom enclosures for our prototype, which resulted in a more rapid and easier prototyping process. 
+
+During the P2 project we did not directly use Calculus, rather just some general mathematics. The course has given us all knowledge we will be able to put into use in the coming projects.
