Done with time and resources

--- a/process-analysis/sections/time-and-resources.tex
+++ b/process-analysis/sections/time-and-resources.tex
@@ -1,4 +1,4 @@
-Given our large scope, getting a good overview of our time and resources was crucial. From the get-go we set up some milestones and the deadlines for completing them. We modeled our whole project around meeting milestones. We created a Gantt-diagram to visualize our milestones.
+Given our large scope, getting a good overview of our time and resources were crucial. From the get-go we set up some milestones and the deadlines. We modeled our whole project around meeting the milestones. We created a Gantt-diagram to visualize them.
 
 In order to make sure we were progressing towards each milestone in a timely manner, we set up various meetings which often had small deadlines attached to them. Each meeting usually lasted 1 hour, and consisted of each member talking about their progress with their specific task and whom should be responsible for new tasks.
 
@@ -8,7 +8,7 @@ In order to make sure we were progressing towards each milestone in a timely man
 	\caption{Initial Gantt Diagram}
 \end{figure}
 
-As we were recieving the parts we ordered we realised they would not arrive in time, for us to start development at the time we intended. We then reevaluated our milestones and came up with a revised gant diagram.
+As we were recieving the parts we ordered we realised they would not arrive in time for us to start development at the time we intended to. We then re-evaluated our milestones and came up with a revised Gantt-diagram.
 
 \begin{figure}[H]
 	\centering
@@ -16,7 +16,7 @@ As we were recieving the parts we ordered we realised they would not arrive in t
 	\caption{Actual Gantt Diagram}
 \end{figure}
 
-We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks in 7 columns, each depicting a stage in the progress of the task.
+We choose to use an online Kanban board for the purpose of keeping track of tasks. We separated tasks into 7 columns, each depicting a stage in the progress of the task.
 
 \begin{figure}[H]
 	\centering
@@ -31,8 +31,8 @@ At the end of the project, we weren't satisfied with the state of our prototypes
 \clearpage
 \section{Discussion and Conclusion}
 
-In terms of time and resource management, our biggest downfall was our optimistic timeframe. We did not take into consideration  the amount of time needed to learn the tools we used. Our scope was also too large, in the sense that we did not consider that we would need to spend so much time fixing errors.
+In terms of time and resource management, our biggest downfall was our optimistic time-frame. We did not take into consideration the amount of time needed to learn the tools we used. Our scope was also too large, in the sense that we did not consider that we would need to spend so much time fixing these errors.
 
-Despite our scope being too big, and us running into many more issues than we expected, we were still able to adjust our milestone deadlines, and scope, so that we could finish development with enough time for us to finish the rest of the report. Coming up with a second gantt-diagram was crucial, since if we had not done it, it would have been much harder for us to tell what we should adjust our scope to.
+Despite our scope being too big, and us running into many more issues than we expected, we were still able to adjust our milestone deadlines, and scope, so that we could finish development with enough time for us to finish the rest of the report. Coming up with a second Gantt-diagram was crucial, since if we had not done it, it would have been much harder for us to tell what we should adjust our scope to.
 
-Another big issue was that we waited too long to order parts, which meant that for around a third of our development, we had nothing to develop. Had we gotten the parts earlier, we might have realised that our scope was too big, and adjust it with much less backlash
+Another big issue was that we waited too long to order parts, which meant that for around a third of our development, we had nothing to develop. Had we gotten the parts earlier, we might have realised that our scope was too big, and adjust it accordingly.
