--- a/process-analysis/sections/appendix.tex
+++ b/process-analysis/sections/appendix.tex
@@ -158,3 +158,13 @@ Signed by:
 @anthonymonori, @utommo, @42f87d89, @emilioamores
 
 The validity of this contract runs for the period of the P1 project, in the timeframe of 02.02.2012 - 28.06.2015
+
+\clearpage
+\section{An example meeting minute}\label{appendix:meeting-minutes-example}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{images/meeting-minute.png}
+	\caption{An example of one of our meeting minute}
+	\label{fig:meetingmin}
+\end{figure}
