--- a/process-analysis/sections/tools-and-processes.tex
+++ b/process-analysis/sections/tools-and-processes.tex
@@ -4,6 +4,8 @@ The full report of the P2 project was written using \LaTeX ~, just as the \texti
 
 Meetings were scheduled using an Exchange calendar and set up a couple of days prior to taking place. During these meetings, a note-taker, whom we rotated on a weekly basis, would write down the outcome tasks and important discussion points. We also distinguished between strategy and work meetings, where the first one was more formal and required meeting minutes, while the latter was just to brainstorm and work on the project. Supervisor meetings were called on set schedule, but rather when it was necessary.
 
+\textit{An example of these meeting minutes can be found in Appendix \ref{appendix:meeting-minutes-example}.}
+
 After the meetings, we posted the minutes of the meeting on our GitHub wiki, and also went over our backlog and added our tasks and to-dos. The GitHub wiki served the purpose of storing meeting minutes, notes, but also our time and resource management, group contract and so on. 
 
 Communication outside of the group was done mainly on Facebook. When we could not be physically present for our meetings, we held them over a Skype call.
