Some basic stuff

--- a/presentation/sections/thomas.tex
+++ b/presentation/sections/thomas.tex
@@ -11,3 +11,63 @@
 \end{frame}
 
 \setbeamertemplate{caption}[default]
+
+\begin{frame}{Process Analysis}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+  \begin{itemize}
+  	\item Learning Goals
+  	\item Our Scope
+  	\item Time and resource management
+  	\item What worked and what didn't
+  	\item Future changes
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Learning Goals}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item<2-> Slow determination of learning goals 
+  	\item<3-> Vague definitions 
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Our Scope}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item<2-> Overambitious
+  	\item<3-> Fulfilling the success criteria
+  	\item<4-> Splitting the prototypes
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Time and resource management}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+
+\end{frame}
+
+\begin{frame}{Time and resource management}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+		\begin{figure}[h!]
+    	\includegraphics[width=1\textwidth]{images/gantt1.png}
+    	\caption{Gantt version 1}
+		\centering    		
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Time and resource management}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+		\begin{figure}[h!]
+    	\includegraphics[width=1\textwidth]{images/gantt2.png}
+    	\caption{Gantt version 2}
+		\centering    		
+	\end{figure}
+\end{frame}
+
+\begin{frame}{What worked}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item<2-> Placeholder
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Future change}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item More cautious regarding scope formation
+  	\item Transitioning to a more unified platform
+  	\item Establish our learning goals earlier on
+  \end{itemize}
+\end{frame}
