--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -3,7 +3,7 @@
 \setbeamertemplate{caption}{\raggedright\insertcaption\par}
 \begin{frame}{Introduction}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
 	\begin{figure}[h!]
-		%\includegraphics[width=0.3\textwidth]{images/gustavo.jpg}
+		\includegraphics[width=0.3\textwidth]{images/gustavo.jpg}
 		\caption{Gustavo S. Buschle}
 		\centering    		
 	\end{figure}
