--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -2,28 +2,34 @@
 
 \setbeamertemplate{caption}{\raggedright\insertcaption\par}
 \begin{frame}{Introduction}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
-	\begin{figure}[h!]
-		\includegraphics[width=0.3\textwidth]{images/gustavo.jpg}
-		\caption{Gustavo S. Buschle}
-		\centering    		
-	\end{figure}
+    \begin{figure}[h!]
+        \includegraphics[width=0.3\textwidth]{images/gustavo.jpg}
+        \caption{Gustavo S. Buschle}
+        \centering
+    \end{figure}
 \end{frame}
 \setbeamertemplate{caption}[default]
 
-%intro to laser
-%    "our other module is ..." segue from anthony
-%    How we assembled the parts (case,slipring,etc which anthony mentions)
-%    (pics)
-%    two versions of laser
-%        v1arduino: hard to sync
-%        v2non-ard: slow
-%
-%ROS
-%    learning curve
-%    ROS compoenets we used
-%
-%Slam (make sure not to talk over emil)
-%    add pics
-%    didn't work very well
-%
-%(linux clock problems?)
+\begin{frame}{The Laser}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+    \begin{itemize}
+        %probably split into more frames
+        \item <1-> Assembly of Parts (pics)
+        \item <2-> Two versions of the laser
+        \item <3-> v1 with aduino: hard to sync
+        \item <4-> v2 without arduino: slow
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{ROS}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+    \begin{itemize}
+        \item <1-> Learning Curve
+        \item <2-> ROS components we used
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{SLAM}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+    \begin{itemize}
+        \item <1-> We didn't actually use it completely(pics)
+        \item <2-> (linux time problems?)
+    \end{itemize}
+\end{frame}
