--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -10,20 +10,31 @@
 \end{frame}
 \setbeamertemplate{caption}[default]
 
-\begin{frame}{The Laser}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+\begin{frame}{The Lidar}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
     \begin{itemize}
-        %probably split into more frames
         \item <1-> Assembly of Parts (pics)
-        \item <2-> Two versions of the laser
-        \item <3-> v1 with aduino: hard to sync
-        \item <4-> v2 without arduino: slow
+            %i2c for laserb
+
+        \item <2-> Two versions of the lidar
+        \begin{itemize}
+            \item <3-> v1 with aduino: hard to sync
+            \item <4-> v2 without arduino: slow
+        \end{itemize}
     \end{itemize}
 \end{frame}
 
 \begin{frame}{ROS}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
     \begin{itemize}
         \item <1-> Learning Curve
-        \item <2-> ROS components we used
+            \begin{itemize}
+                <1-> We didn't understand how ROS worked until development.
+                <2-> There were a lot of different configurations that we needed to change
+            \end{itemize}
+        \item <3-> ROS components we used
+            \begin{itemize}
+                <3-> HectoSLAM
+                <4-> rviz
+            \end{itemize}
     \end{itemize}
 \end{frame}
 
