--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -27,13 +27,13 @@
     \begin{itemize}
         \item <1-> Learning Curve
             \begin{itemize}
-                <1-> We didn't understand how ROS worked until development.
-                <2-> There were a lot of different configurations that we needed to change
+                \item <1-> We didn't understand how ROS worked until development.
+                \item <2-> There were a lot of different configurations that we needed to change
             \end{itemize}
         \item <3-> ROS components we used
             \begin{itemize}
-                <3-> HectoSLAM
-                <4-> rviz
+                \item <3-> HectoSLAM
+                \item <4-> rviz
             \end{itemize}
     \end{itemize}
 \end{frame}
