--- a/presentation/setup/preamble.tex
+++ b/presentation/setup/preamble.tex
@@ -22,6 +22,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
+\usepackage{enumitem}
 \usepackage[T1]{fontenc}
 % Or whatever. Note that the encoding and the font should match. If T1
 % does not look nice, try deleting the line with the fontenc.
