--- a/presentation/sections/thomas.tex
+++ b/presentation/sections/thomas.tex
@@ -15,8 +15,8 @@
 \begin{frame}{Process Analysis}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
   \begin{itemize}
   	\item Learning Goals
-  	\item Our Scope
   	\item Time and resource management
+  	\item Our Scope
   	\item What worked and what didn't
   	\item Future changes
   \end{itemize}
@@ -26,20 +26,16 @@
 \begin{frame}{Learning Goals}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
     \begin{itemize}
   	\item<2-> Slow determination of learning goals 
-  	\item<3-> Vague definitions 
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Our Scope}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
-    \begin{itemize}
-  	\item<2-> Overambitious
-  	\item<3-> Fulfilling the success criteria
-  	\item<4-> Splitting the prototypes
+  	\item<2-> Vague definitions 
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Time and resource management}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
-
+	\begin{itemize}
+		\item<2-> Group conflict
+		\item<3-> Shipping and Ordering
+		\item<4-> Development
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Time and resource management}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
@@ -58,16 +54,34 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{What worked}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+\begin{frame}{Our Scope}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
     \begin{itemize}
-  	\item<2-> Placeholder
+  	\item<2-> Overambitious
+  	\item<3-> Focus on fulfilling the success criteria
+  	\item<4-> Splitting the final product
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Future change}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+\begin{frame}{What worked}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item Github
+  	\item LaTeX
+  	\item Strategy Meetings
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{What didn't work}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item Kanban flow
+  	\item Supervisor contact
+  	\item Our wiki
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Future changes}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
     \begin{itemize}
   	\item More cautious regarding scope formation
-  	\item Transitioning to a more unified platform
   	\item Establish our learning goals earlier on
+  	\item Use of a unified platform 
   \end{itemize}
 \end{frame}
