--- a/presentation/sections/thomas.tex
+++ b/presentation/sections/thomas.tex
@@ -22,11 +22,17 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Learning Goals}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
+    \begin{itemize}
+  	\item Slow determination of learning goals 
+  	\item Vague definitions 
+  \end{itemize}
+\end{frame}
 
 \begin{frame}{Learning Goals}{Thomas Thuesen Enevoldsen\newline<tten14@student.aau.dk>}
     \begin{itemize}
-  	\item<2-> Slow determination of learning goals 
-  	\item<2-> Vague definitions 
+  	\item Common learnings goals
+  	\item Knowledge and growth within goals
   \end{itemize}
 \end{frame}
 
@@ -67,6 +73,7 @@
   	\item Github
   	\item LaTeX
   	\item Strategy Meetings
+  	\item Peer-reviewing
   \end{itemize}
 \end{frame}
 
