--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -12,13 +12,28 @@
 
 \begin{frame}{The Lidar}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
     \begin{itemize}
-        \item <1-> Assembly of Parts (pics)
-            %i2c for laserb
+        \item <1-> Assembly of Parts
+            \begin{itemize}
+                \item <2-> I2C to talk to laser
+                \item <3-> 3D printed case (Not very well)
+            \end{itemize}
 
-        \item <2-> Two versions of the lidar
+        \begin{figure}[h!]
+            \includegraphics[width=0.3\textwidth]{images/}
+        \end{figure}
+        
+        
+        \item <4-> Two versions of the lidar
         \begin{itemize}
-            \item <3-> v1 with aduino: hard to sync
-            \item <4-> v2 without arduino: slow
+            \item <5-> V1: Arduino drives stepper and Pi talks to laser
+                \begin{itemize}
+                    \item <6-> Fragmented development
+                    \item <7-> Hard to sync
+                \end{itemize}
+            \item <8-> V2: Arduino only used for power 
+                \begin{itemize}
+                    \item <9-> Slow
+                \end{itemize}
         \end{itemize}
     \end{itemize}
 \end{frame}
@@ -40,7 +55,10 @@
 
 \begin{frame}{SLAM}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
     \begin{itemize}
-        \item <1-> We didn't actually use it completely(pics)
-        \item <2-> (linux time problems?)
+        \item <1-> We didn't actually use it completely
+        \begin{figure}[h!]
+            \includegraphics[width=0.3\textwidth]{images/}
+        \end{figure}
+        \item <2-> Linux time problems
     \end{itemize}
 \end{frame}
