--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -19,7 +19,7 @@
             \end{itemize}
 
         \begin{figure}[h!]
-            \includegraphics[width=0.3\textwidth]{images/}
+            \includegraphics[width=0.3\textwidth]{images/lidarpi.jpg}
         \end{figure}
         
         
@@ -57,7 +57,7 @@
     \begin{itemize}
         \item <1-> We didn't actually use it completely
         \begin{figure}[h!]
-            \includegraphics[width=0.3\textwidth]{images/}
+            \includegraphics[width=0.3\textwidth]{images/hector.png}
         \end{figure}
         \item <2-> Linux time problems
     \end{itemize}
