--- a/presentation/sections/emil.tex
+++ b/presentation/sections/emil.tex
@@ -14,11 +14,10 @@
 
 \begin{frame}{Hector SLAM}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
   \begin{itemize}
-  	\item Turning of laser too slow
-  	\item Quality over quantity
-  	\item Getting two system timed together
-  	\item Design of a better housing
-  	\item Future changes
+  	\item <2-> Turning of laser too slow
+  	\item <3-> Quality over quantity
+  	\item <4-> Design of a better housing
+  	\item <5-> Control system for rover
   \end{itemize}
 \end{frame}
 
@@ -31,13 +30,12 @@
 	\end{figure}
 \end{frame}
 
-\begin{frame}{}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
+\begin{frame}{Future fixes}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
   \begin{itemize}
-  	\item 1
-  	\item 2
-  	\item 3
-  	\item 4
-  	\item 5
+  	\item <2-> Need faster spinning of laser
+  	\item <3-> Syncing the two systems together 
+  	\item <4-> Combining the rover and the laser
+  	\item <5-> Reading of laser distance to navigate rover
   \end{itemize}
 \end{frame}
 
@@ -46,12 +44,22 @@
 		\item <2-> Mapping and Navigation of unknown terrain
 		% Let's decode the title a bit and look at the individual parts a bit more in depth
 		\begin{itemize}
-			\item <3-> Mapping % idea behind, motivation, problem to solve
-			\item <4-> Navigation % idea behind, motivation, problem to solve
-			\item <5-> Unknown terrain % idea behind, motivation, problem to solve
+			\item <2-> Mapping % idea behind, motivation, problem to solve
+			\item <2-> Navigation % idea behind, motivation, problem to solve
+			\item <2-> Unknown terrain % idea behind, motivation, problem to solve
 		\end{itemize}
-		\item <6-> 3D mapping, full autonomous navigation, etc. % what we have in plans for the future development of the idea (short-motivation)
+		\item <3-> 3D mapping, full autonomous navigation, etc. % what we have in plans for the future development of the idea (short-motivation)
 	\end{itemize}
+\end{frame}
+
+\begin{frame}{Hector SLAM}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
+  \begin{itemize}
+  	\item <2-> 3D camera for mapping
+  	\item <3-> Bigger rover or a drone, perhaps both
+  	\item <4-> On board full SLAM
+  	\item <5-> Use of a 2D laser as close navigation
+  	\item <6-> Way to send that data back
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{3D mapping}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
