STOP LOOKING AT ME THOMAS

--- a/presentation/sections/antal.tex
+++ b/presentation/sections/antal.tex
@@ -64,10 +64,16 @@
 	\begin{itemize}
 		\item HC-SR04 Ultrasonic Range Finder (3 of them)
 		\item DFRobot 4WD Arduino-Compatible Platform with Encoders
-		\item Sabertooth Dual 5A 6V-18V Regenerative Motor Controller		
+		\item Polulululu		
 		\item Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
 		\item CJMCU-110 Optical Flow Sensor w/ Pin Header for APM2.52/ APM2.6 - Purple	(not used afterall)
 		\item 3D printed enclosures for ultrasonic sensors
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{But how does it actually work?}{Antal János Monori\newline<amonor14@student.aau.dk>}
+	\begin{itemize}
+		\item
 	\end{itemize}
 \end{frame}
 
@@ -81,4 +87,8 @@
 		\item Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
 		\item Arduino Mega 2560
 	\end{itemize}
+\end{frame}
+
+\begin{frame}{But how does it actually work?}{Antal János Monori\newline<amonor14@student.aau.dk>}
+	
 \end{frame}
