--- a/presentation/sections/antal.tex
+++ b/presentation/sections/antal.tex
@@ -36,10 +36,10 @@
 
 \begin{frame}{Approach}{Antal János Monori\newline<amonor14@student.aau.dk>}
 	\begin{itemize}
-		\item 1. Idea came from common interest
-		\item 2. Preliminary research
-		\item 3. Focused prototype and scope
-		\item 4. Stakeholder and risk analysis
+		\item <2-> 1. Idea came from common interest
+		\item <3-> 2. Preliminary research
+		\item <4-> 3. Focused prototype and scope
+		\item <5-> 4. Stakeholder and risk analysis
 	\end{itemize}
 \end{frame}
 
@@ -48,47 +48,64 @@
 \end{frame}
 
 \begin{frame}{Prototype}{Antal János Monori\newline<amonor14@student.aau.dk>}
-	We split up the prototype into two parts:
+	\begin{figure}[h!]
+		\only<1>{\includegraphics[width=0.9\textwidth]{images/developmentdiagram.png}}
+		\only<2>{\includegraphics[width=0.7\textwidth]{images/developmentdiagram2.png}}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{Prototype}{Antal János Monori\newline<amonor14@student.aau.dk>}
 	\begin{itemize}
-		\item Navigation-module
-		\item Mapping-module
-	\end{itemize}
-	Motivation behind this:
-	\begin{itemize}
-		\item Individual development
-		\item Decoupling -> avoid risks and unnecessary dependencies
+		\item We split up the prototype into two parts:
+		\begin{itemize}
+			\item <2-> Navigation-module
+			\item <3-> Mapping-module
+		\end{itemize}
+		\item <4-> Motivation behind this:
+		\begin{itemize}
+			\item <5-> Individual development
+			\item <6-> Decoupling -> avoid risks and unnecessary dependencies
+		\end{itemize}
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{Components - Navigation module}{Antal János Monori\newline<amonor14@student.aau.dk>}
 	\begin{itemize}
-		\item HC-SR04 Ultrasonic Range Finder (3 of them)
-		\item DFRobot 4WD Arduino-Compatible Platform with Encoders
-		\item Polulululu		
-		\item Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
-		\item CJMCU-110 Optical Flow Sensor w/ Pin Header for APM2.52/ APM2.6 - Purple	(not used afterall)
-		\item 3D printed enclosures for ultrasonic sensors
+		\item - HC-SR04 Ultrasonic Range Finder (3 of them)
+		\item - DFRobot 4WD Arduino-Compatible Platform with Encoders
+		\item - Pololu DRV8833		
+		\item - Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
+		\item - CJMCU-110 Optical Flow Sensor w/ Pin Header for APM2.52/ APM2.6 - Purple	(not used afterall)
+		\item - 3D printed enclosures for ultrasonic sensors
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{But how does it actually work?}{Antal János Monori\newline<amonor14@student.aau.dk>}
-	\begin{itemize}
-		\item
-	\end{itemize}
+	%\begin{itemize}
+	%	\item 
+	%\end{itemize}
+	\begin{figure}[h!]
+		\includegraphics[width=0.9\textwidth]{images/dissensor.png}
+	\end{figure}
+\end{frame}
+
+\begin{frame}{But how does it actually work?}{Antal János Monori\newline<amonor14@student.aau.dk>}
+	%\begin{itemize}
+	%	\item 
+	%\end{itemize}
+	\begin{figure}[h!]
+		\includegraphics[width=0.9\textwidth]{images/dissensor.png}
+	\end{figure}
 \end{frame}
 
 \begin{frame}{Components - Mapping module}{Antal János Monori\newline<amonor14@student.aau.dk>}
 	\begin{itemize}
-		\item LIDAR-Lite Laser Rangefinder
-		\item Slip Ring with 22mm rim
-		\item 12V, 350mA, 28oz-in NEMA-17 Bipolar Stepper Motor
-		\item EasyDriver - Stepper Motor Driver
-		\item 3D printed case for microcontroller and stepper motor
-		\item Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
-		\item Arduino Mega 2560
+		\item - LIDAR-Lite Laser Rangefinder
+		\item - Slip Ring with 22mm rim
+		\item - 12V, 350mA, 28oz-in NEMA-17 Bipolar Stepper Motor
+		\item - EasyDriver - Stepper Motor Driver
+		\item - 3D printed case for microcontroller and stepper motor
+		\item - Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
+		\item - Arduino Mega 2560
 	\end{itemize}
-\end{frame}
-
-\begin{frame}{But how does it actually work?}{Antal János Monori\newline<amonor14@student.aau.dk>}
-	
 \end{frame}
