--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -10,29 +10,31 @@
 \end{frame}
 \setbeamertemplate{caption}[default]
 
-\begin{frame}{The Lidar}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+\begin{frame}{The Lidar: Assembly of Parts}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
     \begin{itemize}
-        \item <1-> Assembly of Parts
-            \begin{itemize}
-                \item <2-> I2C to talk to laser
-                \item <3-> 3D printed case (Not very well)
-            \end{itemize}
-        \item <4-> Two versions of the lidar
-        \begin{itemize}
-            \item <5-> V1: Arduino drives stepper and Pi talks to laser
-                \begin{itemize}
-                    \item <6-> Fragmented development
-                    \item <7-> Hard to sync
-                \end{itemize}
-            \item <8-> V2: Arduino only used for power 
-                \begin{itemize}
-                    \item <9-> Slow
-                \end{itemize}
-        \end{itemize}
-    \end{itemize}
-        \begin{figure}[h!]
+        \item <1-> I2C to talk to laser
+        \item <2-> 3D printed case (Not very well)
+        \item <1-> \begin{figure}
             \includegraphics[width=0.3\textwidth]{images/lidarpi.jpg}
         \end{figure}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{The Lidar: Two Versions}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
+    \begin{itemize}
+        \item <1-> V1: Arduino drives stepper and Pi talks to laser
+            \begin{itemize}
+                \item <2-> Fragmented development
+                \item <3-> Hard to sync
+            \end{itemize}
+        \item <4-> V2: Arduino only used for power 
+            \begin{itemize}
+                \item <5-> Slow
+            \end{itemize}
+        \item <1-> \begin{figure}[h!]
+            \includegraphics[width=0.3\textwidth]{images/steppermotor.png}
+        \end{figure}
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{ROS}{Gustavo S. Buschle\newline<gbusch14@student.aau.dk>}
@@ -44,8 +46,8 @@
             \end{itemize}
         \item <3-> ROS components we used
             \begin{itemize}
-                \item <3-> HectoSLAM
-                \item <4-> rviz
+                \item <4-> HectoSLAM
+                \item <5-> rviz
             \end{itemize}
     \end{itemize}
 \end{frame}
