--- a/presentation/sections/emil.tex
+++ b/presentation/sections/emil.tex
@@ -16,7 +16,7 @@
   \begin{itemize}
   	\item <2-> Turning of laser too slow
   	\item <3-> Quality over quantity
-  	\item <4-> Design of a better housing
+  	\item <4-> Design of a better laser housing
   	\item <5-> Control system for rover
   \end{itemize}
 \end{frame}
@@ -33,13 +33,13 @@
 \begin{frame}{Future fixes}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
   \begin{itemize}
   	\item <2-> Need faster spinning of laser
-  	\item <3-> Syncing the two systems together 
-  	\item <4-> Combining the rover and the laser
+  	\item <3-> Combining navigation and mapping 
+  	\item <4-> Design of a single prototype
   	\item <5-> Reading of laser distance to navigate rover
   \end{itemize}
 \end{frame}
 
-\begin{frame}{}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
+\begin{frame}{Future scope}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
 	\begin{itemize}
 		\item <2-> Mapping and Navigation of unknown terrain
 		% Let's decode the title a bit and look at the individual parts a bit more in depth
@@ -52,7 +52,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Hector SLAM}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
+\begin{frame}{3D mapping}{Emil Már Einarsson\newline<eeinar14@student.aau.dk>}
   \begin{itemize}
   	\item <2-> 3D camera for mapping
   	\item <3-> Bigger rover or a drone, perhaps both
