--- a/presentation/sections/antal.tex
+++ b/presentation/sections/antal.tex
@@ -106,6 +106,6 @@
 		\item - EasyDriver - Stepper Motor Driver
 		\item - 3D printed case for microcontroller and stepper motor
 		\item - Raspberry Pi 2 Model B ARM Cortex-A7 Quad Core CPU 900MHz 1GB RAM 
-		\item - Arduino Mega 2560
+		\item - Arduino Uno
 	\end{itemize}
 \end{frame}
