--- a/presentation/sections/gustavo.tex
+++ b/presentation/sections/gustavo.tex
@@ -14,7 +14,8 @@
     \begin{itemize}
         \item <1-> I2C to talk to laser
         \item <2-> 3D printed case (Not very well)
-        \item <1-> \begin{figure}
+        \item <3-> Stepper Motor
+        \item <2-2> \begin{figure}
             \includegraphics[width=0.3\textwidth]{images/lidarpi.jpg}
         \end{figure}
     \end{itemize}
@@ -32,7 +33,7 @@
                 \item <5-> Slow
             \end{itemize}
         \item <4-> \begin{figure}[h!]
-            \includegraphics[width=0.3\textwidth]{images/steppermotor.png}
+            \includegraphics[width=0.5\textwidth]{images/steppermotor.png}
         \end{figure}
     \end{itemize}
 \end{frame}
